--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -43,7 +43,7 @@
     <title>Zasper</title>
   </head>
   <body>
-    <section id="header-home">
+    <section id="header-home2">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="/">
