--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,12 +5,13 @@
       <div class="row">
         <div class="col-12 col-md-12 col-lg-6">
           <div class="header-text wow fadeInUp" data-wow-delay="0.2s">
-            <h3 class="font-h3 fontw-300">an Opensource IDE</h3>
-            <h1 class="font-h1 fontw-500">Built in Go!</h1>
+            <h3 class="font-h3 fontw-300">High Performace IDE</h3>
+            <h3 class="font-h4 fontw-500">Built for massive concurrency</h3>
             <p class="font-p">
-                The new generation of IDEs will need massive concurrency for AI workloads. Zasper strives to solve that.
-            </p>  
-            <p class="font-p"><strong>Just a hobby project!</strong>
+              Zasper is an IDE designed from the ground up to support massive concurrency. It provides a minimal memory footprint, exceptional speed, and the ability to handle numerous concurrent connections.
+            </p>
+            <p class="font-p">
+              It's perfectly suited for running REPL-style data applications, e.g. <strong>Jupyter notebooks</strong>.
             </p>
             <div class="header-form wow fadeInUp" data-wow-delay="0.2s">
                <a href="https://github.com/zasper-io/zasper" class="custom-btn btn-bg hover-bg" id="banner-signup">Checkout on Github</a>
