--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,7 +174,7 @@ nav.navbar.navbar-expand-lg {
     outline: -webkit-focus-ring-color auto 0px;
 }
 .header-form {
-    margin-top: 65px;
+    margin-top: 25px;
     width: 450px;
     max-width: 100%;
 }
@@ -555,4 +555,541 @@ button.owl-dot.active {
 }
 .login-signup-form-top p {
     color: #8B8B8B;
+}
+
+
+/*
+Blog 
+*/
+
+.blog-list-item a{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 222px;
+    overflow: hidden;
+    box-shadow: 0px 3px 16px #00000029;
+    margin-bottom: 30px;
+}
+.blog-list-item a:hover {
+    box-shadow: 0px 3px 16px #583bd829;
+}
+.blog-list-item a:hover img{
+    transform: scale(1.1);
+
+}
+.blog-list-item-image {
+    width: 30%;
+    overflow: hidden;
+}
+.blog-list-item-content {
+    width: 70%;
+}
+.blog-list-item-image {
+    width: 35%;
+    overflow: hidden;
+    position: relative;
+    height: 222px;
+}
+section#blog-sec {
+    padding: 20px 0px;
+    min-height: calc(100vh - 100px);
+}
+.blog-list-item-image img {
+    width: 100%;
+    min-height: 222px;
+    transition: .3s ease;
+}
+.blog-list-item-content h2 {
+    color: #281964;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.blog-published-info span {
+    color: #484848;
+    font-weight: 500;
+    font-size: 13px;
+}
+span.blog-post-author {
+    color: #583BD8;
+}
+.blog-published-info {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.blog-list-item-content {
+    width: 65%;
+    padding: 30px;
+}
+section#blog-sec .container {
+    padding: 0px 140px;
+}
+.blog-list-item-content p {
+    color: #484848;
+    font-size: 16px;
+    line-height: 24px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+.new-blog, .popular-blog {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background: #583bd8;
+    height: 23px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 10px;
+    border-radius: 15px;
+    padding: 0px 12px;
+}
+.popular-blog{
+    background: #D8903B;
+}
+a.page-link {
+    border: 1px solid;
+    border-radius: 6px !important;
+    color: #484848;
+    margin-right: 5px;
+    width: 38px;
+    padding: 6px 0px;
+    text-align: center;
+}
+.page-link:focus {
+    z-index: 3;
+    color: #fff;
+    background-color: #583BD8;
+    outline: 0;
+    box-shadow: 0 0 0 0;
+}
+ul.pagination li a {
+    border: 1px solid #484848;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    margin-right: 8px;
+    font-weight: 400;
+    color: #484848;
+    font-size: 18px;
+}
+ul.pagination li a i{
+    font-size: 22px;
+}
+ul.pagination li a:hover{
+    color: #fff;
+    background: #583BD8;
+    border: 1px solid #583BD8;
+}
+.pagination-wraper {
+    margin-top: 50px;
+}
+.active-pagination a{
+    color: #fff !important;
+    background: #583BD8;
+    border: 1px solid #583BD8 !important;
+}
+.search-form-wraper button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 14px 14px;
+    border-radius: 10px;
+}
+.search-form-wraper input {
+    width: 100%;
+    position: relative;
+    padding: 14px;
+    border: 1px solid #E3E3E3;
+    box-shadow: inset 0px 0px 10px #00000029;
+    border-radius: 10px;
+    padding-right: 54px;
+}
+.search-form-wraper form {
+    position: relative;
+}
+:focus-visible {
+    outline: -webkit-focus-ring-color auto 0px;
+}
+.blog-page-right-wraper h6 {
+    font-size: 18px;
+    color: #484848;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.latest-post-item a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+    overflow: hidden;
+}
+.latest-post-item-image {
+    width: 40%;
+    height: 80px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.latest-post-item-image img{
+    width: 100%;
+    transition: .3s ease;
+    min-height: 100%;
+}
+.latest-post-item a:hover img{
+    transform: scale(1.1);
+}
+.latest-post-item-content {
+    width: 60%;
+    padding-left: 12px;
+}
+.latest-post-item-content h2 {
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 18px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    color: #281964;
+}
+.latest-post-item-content span {
+    font-size: 12px;
+    color: #484848;
+}
+.latest-post-wraper {
+    margin-top: 50px;
+}
+.latest-post-item {
+    margin-bottom: 35px;
+}
+.search-wraper {
+    margin-top: 15px;
+}
+.tags-wraper {
+    margin-top: 50px;
+}
+.tag-clouds a {
+    padding: 10px 10px;
+    font-size: 15px;
+    font-weight: 500;
+    color: #281964;
+    background: #D9D3F4;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    margin-right: 2px;
+}
+.tag-clouds a:hover{
+    color: #fff;
+    background: #583BD8;
+}
+.latest-post-item:last-child{
+    margin-bottom: 0px;
+}
+.blog-main-image img {
+    width: 100%;
+}
+.blog-title h2 {
+    font-size: 42px;
+    font-weight: 400;
+    color: #281964;
+}
+.blog-title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.blog-description p {
+    font-weight: 300;
+    font-size: 16px;
+    color: #484848;
+    line-height: 30px;
+    margin-bottom: 25px;
+    margin-top: 20px;
+}
+
+.blog-description li {
+    font-weight: 300;
+    font-size: 16px;
+    color: #484848;
+    line-height: 30px;
+}
+
+.blog-description p:last-child{
+    margin-bottom: 0px;
+}
+.blog-description {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.image-half-inside-blog-details {
+    display: flex;
+    justify-content: space-between;
+}
+.image-half-inside-blog-details img {
+    width: 49%;
+}
+.image-full-inside-blog-details img {
+    width: 100%;
+}
+.related-blog-wraper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 70px;
+}
+.related-blog-wraper h6 {
+    font-size: 18px;
+    color: #484848;
+    font-weight: 600;
+    margin-bottom: 15px;
+    width: 100%;
+}
+.related-blog-item {
+    width: 48%;
+    margin-bottom: 0px;
+    background: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 18px #00000029;
+}
+.related-blog-item .latest-post-item-image{
+    border-radius: 0px;
+}
+
+
+
+table {
+  padding: 0; }
+  table tr {
+    border-top: 1px solid #cccccc;
+    background-color: white;
+    margin: 0;
+    padding: 0; }
+    table tr:nth-child(2n) {
+      background-color: #f8f8f8; }
+      table tr th {
+      font-weight: bold;
+      border: 1px solid #cccccc;
+      text-align: left;
+      margin: 0;
+      padding: 6px 13px; }
+    table tr td {
+      border: 1px solid #cccccc;
+      text-align: left;
+      margin: 0;
+      padding: 6px 13px; }
+    table tr th :first-child, table tr td :first-child {
+      margin-top: 0; }
+    table tr th :last-child, table tr td :last-child {
+margin-bottom: 0; }
+
+
+
+/*
+    Docs
+*/
+.zasper-documentation-header {
+    text-align: center;
+    padding: 60px 0px;
+    background: transparent linear-gradient(97deg, #FFFFFF 0%, #D6D4E0 100%) 0% 0% no-repeat padding-box;
+}
+.section-title {
+    text-align: center;
+}
+.documentation-product-sec .section-title h4 {
+    font-size: 30px !important;
+}
+.documentation-product-wraper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 60px;
+    flex-wrap: wrap;
+}
+.documentation-product-item {
+    width: 32%;
+    text-align: center;
+    padding: 30px 55px;
+    padding-top: 45px;
+}
+.product-image img {
+    width: 250px;
+}
+.product-content h2 {
+    font-size: 28px;
+    font-weight: 500;
+    color: #564D7B;
+    margin-bottom: 10px;
+}
+.product-content p {
+    font-size: 16px;
+    color: #484848;
+    line-height: 25px;
+}
+.product-image {
+    margin-bottom: 25px;
+}
+.documentation-product-item {
+    width: 32%;
+    text-align: center;
+    padding: 30px 55px;
+    padding-top: 45px;
+    box-shadow: 0px 3px 16px #00000029;
+    border-radius: 20px;
+}
+.documentation-product-sec {
+    padding: 75px 0px;
+}
+.documentation-page-links {
+    padding: 50px 35px;
+    height: max-content;
+}
+section#documentation-sec {
+    padding: 0px;
+}
+.documentation-page-links a {
+    display: table;
+    font-size: 16px;
+    font-weight: 500;
+    color: #484848;
+    margin-bottom: 17px;
+}
+.documentation-page-links a svg {
+    margin-right: 7px;
+    width: 17px;
+    height: auto;
+}
+.documentation-page-links a:hover{
+    color: #583BD8;
+}
+.documentation-page-links a:hover svg path{
+    fill: #583BD8;
+}
+.documentation-content-top a {
+    font-size: 16px;
+    font-weight: 500;
+    color: #583BD8;
+}
+.documentation-content-top span{
+    font-size: 16px;
+    font-weight: 500;
+    color: #564D7B;
+}
+.documentation-content-top i {
+    font-size: 22px;
+    font-weight: 600;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.documentation-content-top {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+span.documentation-date {
+    color: #A7A7A7;
+    font-size: 14px;
+    margin-top: 6px;
+    display: inline-block;
+}
+.documentation-main-content p {
+    font-size: 14px;
+    color: #484848;
+    margin-bottom: 15px;
+}
+.documentation-main-content > ul {
+    font-size: 14px;
+    color: #484848;
+    margin-bottom: 15px;
+}
+.documentation-topic h6 {
+    font-size: 14px;
+    font-weight: 700;
+    color: #583BD8;
+    display: list-item;
+    margin-left: 32px;
+}
+.documentation-topic ul {
+    margin-bottom: 0;
+    font-size: 14px;
+    color: #583BD8;
+    margin-left: 32px;
+    margin-top: 10px;
+}
+.documentation-topic {
+    margin-bottom: 10px;
+}
+.documentation-title {
+    margin-bottom: 30px;
+    margin-top: 25px;
+}
+.feedback-wraper {
+    box-shadow: 0px 3px 16px #00000029;
+    padding: 24px;
+    display: flex;
+    align-items: center;
+    width: 370px;
+    max-width: 100%;
+    margin-top: 55px;
+    border-radius: 10px;
+    justify-content: center;
+}
+.feedback-wraper p {
+    font-size: 16px;
+    color: #484848;
+    margin-right: 10px;
+}
+.feedback-wraper a {
+    border: 1px solid #707070;
+    color: #484848;
+    font-size: 16px;
+    padding: 2px 13px;
+    border-radius: 5px;
+    margin-right: 5px;
+}
+.feedback-wraper a:hover{
+    background: #707070;
+    color: #fff;
+}
+.documentation-sec-wraper {
+    display: flex;
+    justify-content: space-between;
+}
+.documentation-page-links {
+    width: 24%;
+    min-height: 600px;
+}
+.documentation-content-main {
+    width: 74%;
+}
+button.btn-fixed-bottom {
+    border: none;
+    background: #583bd8;
+    font-size: 25px;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    color: #fff;
+    width: 45px;
+    height: 45px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
 }
