--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -876,3 +876,1002 @@
 	    font-size: 16px;
 	}
 }
+
+
+/*
+@media (min-width: 1700px){
+	.container{
+	    max-width: 1637px;
+	}
+	/*
+	    End zasper collection
+	*/
+}
+
+
+@media (max-width: 1700px) {
+	.blog-list-item-image img {
+	    width: 140%;
+	    min-height: 100%; 
+	    transition: .3s ease;
+	}
+	section#blog-sec .container {
+	    padding: 0px 0px;
+	}
+	.tag-clouds a {
+	    padding: 10px 9px;
+	}
+}
+
+@media (max-width: 1399.98px) {
+	.font-h3 {
+	    font-size: 38px !important;
+	}
+	.font-h1 {
+	    font-size: 60px !important;
+	}
+	.font-h2 {
+	    font-size: 50px !important;
+	}
+	.font-p {
+	    font-size: 16px !important;
+	}
+	.font-h4 {
+	    font-size: 35px !important;
+	}
+	.font-h2 {
+	    font-size: 42px !important;
+	}
+	.font-h5 {
+	    font-size: 18px !important;
+	}
+	a.nav-link {
+	    font-size: 16px;
+	}
+	a.navbar-brand {
+	    width: 200px;
+	}
+	.menu-right-btn {
+	    width: 200px;
+	}
+	.footer-content p {
+	    width: 95%;
+	}
+	/*
+	    End zasper collection
+	*/
+	.blog-list-item-content h2 {
+	    font-size: 18px;
+	    line-height: 24px;
+	}
+	.blog-list-item-content p {
+	    font-size: 15px;
+	}
+	.blog-list-item-content {
+	    width: 60%;
+	    padding: 20px;
+	}
+	.blog-list-item-image {
+	    width: 40%;
+	}
+	.blog-list-item-image img {
+	    width: 100%;
+	    min-height: 100%;
+	    transition: .3s ease;
+	}
+	
+}
+
+@media (max-width: 1199.98px) {
+	.font-h1 {
+	    font-size: 50px !important;
+	}
+	.font-h2 {
+	    font-size: 38px !important;
+	}
+	.font-h3 {
+	    font-size: 32px !important;
+	}
+	.font-h4 {
+	    font-size: 28px !important;
+	}
+	.footer-menu-wraper > div {
+	    width: 24%;
+	}
+	a.navbar-brand {
+	    width: 160px;
+	}
+	.updates-wraper {
+	    padding: 0px 25px;
+	}
+	.footer-menu h6 {
+	    font-size: 15px;
+	}
+	/*
+	    End zasper collection
+	*/
+	.blog-list-item-image {
+	    width: 30%;
+	}
+	.blog-list-item-content {
+	    width: 70%;
+	    padding: 20px;
+	}
+	.blog-list-item a {
+	    height: 190px;
+	}
+	.blog-list-item-image {
+	    width: 35%;
+	    height: 190px;
+	}
+	.tag-clouds a {
+	    padding: 7px 9px;
+	    font-size: 12px;
+	}
+	ul.pagination li a {
+	    width: 45px;
+	    height: 45px;
+	    font-size: 16px;
+	}
+	
+}
+
+@media (max-width: 991.98px) {
+	.font-h2 {
+	    font-size: 35px !important;
+	}
+	.font-h5 {
+	    font-size: 15px !important;
+	    line-height: 22px;
+	}
+	.font-h3 {
+	    font-size: 25px !important;
+	}
+	button.navbar-toggler {
+	    border: none;
+	    font-size: 35px;
+	    padding: 0;
+	    color: #583bd8;
+	}
+	.menu-right-btn {
+	    position: absolute;
+	    right: 80px;
+	    width: auto;
+	    top: 10px;
+	}
+	nav.navbar.navbar-expand-lg .container {
+	    position: relative;
+	}
+	section#footer {
+	    background: #ECEBED;
+	    padding: 70px 0px;
+	    margin-top: 50px;
+	}
+	.footer-menu {
+	    margin-bottom: 40px;
+	}
+	.header-form {
+	    margin-top: 40px;
+	}
+	.form-group input {
+	    padding: 10px 10px;
+	    border-radius: 8px;
+	    font-size: 14px;
+	}
+	.form-group button {
+	    padding: 6px 10px;
+	    font-size: 14px;
+	}
+	.updates-image {
+	    width: 450px;
+	    margin-right: 30px;
+	}
+	.footer-menu-wraper > div {
+	    width: 21%;
+	}
+	.footer-content p {
+	    margin-top: 10px;
+	    margin-bottom: 15px;
+	}
+	.footer-image {
+	    width: 130px;
+	}
+	section#copyright {
+	    background: #F4F4F5;
+	    padding: 15px 0px;
+	    text-align: center;
+	    color: #9892B2;
+	}
+	section#copyright p {
+	    font-size: 14px;
+	}
+	.navbar-collapse button.colse-btn {
+	    display: block;
+	    position: absolute;
+	    right: 25px;
+	    top: 15px;
+	    background: transparent;
+	    border: none;
+	    padding: 0;
+	    font-size: 24px;
+	    color: #281964;
+	}
+	div#offcanvasMenu {
+	    min-height: 100vh;
+	    background: transparent linear-gradient(
+	119deg, #FFFFFF 0%, #D6D4E0 100%) 0% 0% no-repeat padding-box;
+	    border: none !important;
+	}
+	a.nav-link {
+	    font-size: 20px;
+	    text-align: center;
+	    margin-top: 10px;
+	    margin-bottom: 10px;
+	    font-weight: 400;
+	}
+	/*
+	    End zasper collection
+	*/
+	.blog-page-right-wraper {
+	    display: flex;
+	    justify-content: space-between;
+	    flex-wrap: wrap;
+	}
+	.blog-page-right-wraper > div {
+	    width: 100%;
+	}
+	.search-wraper {
+	    width: 100%;
+	}
+	.latest-post-wraper {
+	    width: 48% !important;
+	}
+	.tags-wraper {
+	    width: 48% !important;
+	}
+	section#blog-sec {
+	    padding: 50px 0px;
+	}
+	nav.navbar.navbar-expand-lg {
+	    padding: 10px 10px;
+	    box-shadow: 0px 3px 16px #00000029;
+	}
+	.blog-title h2 {
+	    font-size: 35px;
+	}
+	.blog-description p {
+	    font-size: 16px;
+	    line-height: 25px;
+	}
+
+}
+
+@media (max-width: 767.98px) {
+	.font-h2 {
+	    font-size: 30px !important;
+	}
+	.font-h1 {
+	    font-size: 45px !important;
+	}
+	
+	.font-p {
+	    font-size: 15px !important;
+	}
+	
+	.font-h4 {
+	    font-size: 22px !important;
+	}
+	.footer-info {
+	    margin-bottom: 40px;
+	}
+	.updates-wraper {
+	    flex-wrap: wrap;
+	}
+	.updates-image {
+	    width: 350px;
+	    margin-right: 0px;
+	    max-width: 100%;
+	}
+	.updates-form.header-form {
+	    margin-top: 40px;
+	    margin-bottom: 10px;
+	}
+	#updates .container:after {
+	    height: 90%;
+	    bottom: -20px;
+	    border-radius: 40px;
+	}
+	.updates-form.header-form {
+	    margin-top: 40px;
+	    margin-bottom: 10px;
+	}
+	.footer-content p {
+	    font-size: 14px;
+	    line-height: 22px;
+	}
+	section#footer {
+	    background: #ECEBED;
+	    padding: 50px 0px;
+	    margin-top: 65px;
+	}
+	a.navbar-brand {
+	    width: 140px;
+	}
+	.menu-right-btn {
+	    position: absolute;
+	    right: 65px;
+	    width: auto;
+	    top: 11px;
+	}
+	/*
+	    End zasper collection
+	*/
+	.blog-list-item a {
+	    height: auto;
+	    flex-wrap: wrap;
+	}
+	.blog-list-item-image {
+	    width: 100%;
+	    height: 190px;
+	}
+	.blog-list-item-content {
+	    width: 100%;
+	    padding: 20px;
+	}
+	.blog-list-item {
+	    width: 80%;
+	    margin: 0 auto;
+	}
+	ul.pagination {
+	    justify-content: center;
+	}
+	.blog-title h2 {
+	    font-size: 30px;
+	}
+	.blog-description p {
+	    font-size: 16px;
+	    line-height: 25px;
+	    margin-bottom: 15px;
+	}
+	.blog-description {
+	    margin-top: 20px;
+	    margin-bottom: 20px;
+	}
+	.blog-title {
+	    margin-top: 20px;
+	    margin-bottom: 15px;
+	}
+}
+
+@media (max-width: 575.98px) {
+	.font-h1 {
+	    font-size: 40px !important;
+	}
+	.menu-right-btn .btn-border, .menu-right-btn .btn-bg {
+	    padding: 6px 10px;
+	}
+	.menu-right-btn {
+	    top: 10px;
+	}
+	a.nav-link {
+	    font-size: 18px;
+	    margin-top: 7px;
+	    margin-bottom: 7px;
+	}
+	/*
+	    End zasper collection
+	*/
+	section#blog-sec .container {
+	    padding: 0px 10px;
+	}
+	.blog-list-item {
+	    width: 90%;
+	    margin: 0 auto;
+	}
+	ul.pagination li a {
+	    width: 40px;
+	    height: 40px;
+	    font-size: 16px;
+	}
+	ul.pagination li a i {
+	    font-size: 20px;
+	}
+	.latest-post-wraper {
+	    width: 100% !important;
+	}
+	.tags-wraper {
+	    width: 100% !important;
+	}
+	.latest-post-item a {
+	    height: 100px;
+	}
+	.latest-post-item-image {
+	    width: 30%;
+	    height: 100px;
+	}
+	.latest-post-item-content {
+	    width: 70%;
+	}
+	.latest-post-wraper {
+	    margin-top: 35px;
+	}
+	.tags-wraper {
+	    margin-top: 35px;
+	}
+	section#blog-sec {
+	    padding: 30px 0px;
+	}
+	.related-blog-item {
+	    width: 100%;
+	    margin-bottom: 20px;
+	    background: white;
+	    padding: 10px;
+	    border-radius: 10px;
+	    box-shadow: 0px 0px 18px #00000029;
+	}
+	.related-blog-wraper {
+	    margin-top: 50px;
+	    margin-bottom: 25px;
+	}
+	.blog-title h2 {
+	    font-size: 25px;
+	    line-height: 32px;
+	    font-weight: 500;
+	}
+}
+@media (max-width: 500px) {
+	
+}
+@media (max-width: 400px) {
+	.font-h2 {
+	    font-size: 25px !important;
+	}
+	.font-h4 {
+	    font-size: 19px !important;
+	}
+	.font-h3 {
+	    font-size: 22px !important;
+	}
+	.footer-menu {
+	    margin-top: 30px;
+	    margin-bottom: 30px;
+	}
+	.footer-menu-wraper > div {
+	    width: 48%;
+	}
+	#updates .container:after {
+	    height: 90%;
+	    bottom: -20px;
+	    border-radius: 20px;
+	}
+	.footer-menu-wraper {
+	    flex-wrap: wrap;
+	}
+	.menu-right-btn {
+	    display: none;
+	}
+	a.nav-link {
+	    font-size: 16px;
+	}
+	.menu-right-btn.mobile-menu-login-signup {
+	    display: block;
+	    position: absolute;
+	    left: 50%;
+	    transform: translate(-50%, 0);
+	    width: fit-content;
+	    bottom: 70px !important;
+	    top: auto;
+	    right: inherit;
+	}
+	/*
+	    End zasper collection
+	*/
+	.blog-list-item-image {
+	    width: 100%;
+	    height: 160px;
+	}
+	.blog-published-info span {
+	    display: block;
+	}
+	.blog-list-item {
+	    width: 100%;
+	    margin: 0 auto;
+	}
+	.latest-post-item-image {
+	    width: 35%;
+	    height: 100px;
+	}
+	.latest-post-item-content {
+	    width: 65%;
+	}
+	.image-half-inside-blog-details img {
+	    width: 100%;
+	    margin-top: 7px;
+	    margin-bottom: 7px;
+	}
+	.image-half-inside-blog-details {
+	    display: flex;
+	    justify-content: space-between;
+	    flex-wrap: wrap;
+	}
+
+}
+*/
+
+
+
+/*
+docs
+*/
+
+@media (min-width: 1700px){
+	.container{
+	    max-width: 1637px;
+	}
+	/*
+	    End zasper collection
+	*/
+}
+
+
+@media (max-width: 1700px) {
+	.documentation-product-item {
+	    width: 32%;
+	    padding: 30px 20px;
+	}
+	.documentation-page-links {
+	    width: 28%;
+	}
+	.documentation-content-main {
+	    width: 70%;
+	}
+}
+
+@media (max-width: 1399.98px) {
+	.font-h3 {
+	    font-size: 38px !important;
+	}
+	.font-h1 {
+	    font-size: 60px !important;
+	}
+	.font-h2 {
+	    font-size: 50px !important;
+	}
+	.font-p {
+	    font-size: 16px !important;
+	}
+	.font-h4 {
+	    font-size: 35px !important;
+	}
+	.font-h2 {
+	    font-size: 42px !important;
+	}
+	.font-h5 {
+	    font-size: 18px !important;
+	}
+	a.nav-link {
+	    font-size: 16px;
+	}
+	a.navbar-brand {
+	    width: 200px;
+	}
+	.menu-right-btn {
+	    width: 200px;
+	}
+	.footer-content p {
+	    width: 95%;
+	}
+	/*
+	    End zasper collection
+	*/
+	.product-content h2 {
+	    font-size: 24px;
+	}
+	.product-content p {
+	    font-size: 14px;
+	}
+	.product-content {
+	    min-height: 145px;
+	}
+	.product-image img {
+	    width: 210px;
+	}
+	.product-image {
+	    margin-bottom: 25px;
+	    margin-top: 20px;
+	}
+	.documentation-product-sec .section-title h4 {
+	    font-size: 25px !important;
+	}
+	.documentation-page-links {
+	    width: 32%;
+	}
+	.documentation-content-main {
+	    width: 65%;
+	}
+	
+}
+
+@media (max-width: 1199.98px) {
+	.font-h1 {
+	    font-size: 50px !important;
+	}
+	.font-h2 {
+	    font-size: 38px !important;
+	}
+	.font-h3 {
+	    font-size: 32px !important;
+	}
+	.font-h4 {
+	    font-size: 28px !important;
+	}
+	.footer-menu-wraper > div {
+	    width: 24%;
+	}
+	a.navbar-brand {
+	    width: 160px;
+	}
+	.updates-wraper {
+	    padding: 0px 25px;
+	}
+	.footer-menu h6 {
+	    font-size: 15px;
+	}
+	/*
+	    End zasper collection
+	*/
+	.product-image img {
+	    width: 170px;
+	}
+	.product-content h2 {
+	    font-size: 20px;
+	}
+	.product-content {
+	    min-height: 140px;
+	}
+	.documentation-product-sec .section-title h4 {
+	    font-size: 20px !important;
+	}
+	.documentation-page-links a {
+	    font-size: 14px;
+	    margin-bottom: 15px;
+	}
+	.documentation-page-links {
+	    box-shadow: 0px 3px 16px #00000017;
+	    padding: 40px 25px;
+	}
+	
+}
+
+@media (max-width: 991.98px) {
+	.font-h2 {
+	    font-size: 35px !important;
+	}
+	.font-h5 {
+	    font-size: 15px !important;
+	    line-height: 22px;
+	}
+	.font-h3 {
+	    font-size: 25px !important;
+	}
+	button.navbar-toggler {
+	    border: none;
+	    font-size: 35px;
+	    padding: 0;
+	    color: #583bd8;
+	}
+	.menu-right-btn {
+	    position: absolute;
+	    right: 80px;
+	    width: auto;
+	    top: 10px;
+	}
+	nav.navbar.navbar-expand-lg .container {
+	    position: relative;
+	}
+	section#footer {
+	    background: #ECEBED;
+	    padding: 70px 0px;
+	    margin-top: 50px;
+	}
+	.footer-menu {
+	    margin-bottom: 40px;
+	}
+	.header-form {
+	    margin-top: 40px;
+	}
+	.form-group input {
+	    padding: 10px 10px;
+	    border-radius: 8px;
+	    font-size: 14px;
+	}
+	.form-group button {
+	    padding: 6px 10px;
+	    font-size: 14px;
+	}
+	.updates-image {
+	    width: 450px;
+	    margin-right: 30px;
+	}
+	.footer-menu-wraper > div {
+	    width: 21%;
+	}
+	.footer-content p {
+	    margin-top: 10px;
+	    margin-bottom: 15px;
+	}
+	.footer-image {
+	    width: 130px;
+	}
+	section#copyright {
+	    background: #F4F4F5;
+	    padding: 15px 0px;
+	    text-align: center;
+	    color: #9892B2;
+	}
+	section#copyright p {
+	    font-size: 14px;
+	}
+	.navbar-collapse button.colse-btn {
+	    display: block;
+	    position: absolute;
+	    right: 25px;
+	    top: 15px;
+	    background: transparent;
+	    border: none;
+	    padding: 0;
+	    font-size: 24px;
+	    color: #281964;
+	}
+	div#offcanvasMenu {
+	    min-height: 100vh;
+	    background: transparent linear-gradient(
+	119deg, #FFFFFF 0%, #D6D4E0 100%) 0% 0% no-repeat padding-box;
+	    border: none !important;
+	}
+	a.nav-link {
+	    font-size: 20px;
+	    text-align: center;
+	    margin-top: 10px;
+	    margin-bottom: 10px;
+	    font-weight: 400;
+	}
+	/*
+	    End zasper collection
+	*/
+	.documentation-product-item {
+	    width: 60%;
+	    padding: 30px 20px;
+	    margin: 0 auto;
+	    margin-bottom: 20px;
+	    margin-top: 20px;
+	}
+	.product-content h2 {
+	    font-size: 22px;
+	}
+	.documentation-page-links a {
+	    font-size: 15px;
+	    margin-bottom: 15px;
+	}
+	.documentation-page-links {
+	    box-shadow: 0px 3px 16px #00000017;
+	    padding: 40px 40px;
+	    margin-bottom: 30px;
+	}
+	.documentation-sec-wraper {
+	    flex-wrap: wrap;
+	}
+	.documentation-page-links {
+	    width: 100%;
+	}
+	.documentation-content-main {
+	    width: 100%;
+	}
+	button.btn-fixed-bottom {
+	    display: flex;
+	}
+	.documentation-sec-wraper .documentation-page-links {
+	    display: none;
+	}
+	section#documentation-sec {
+	    padding: 40px 0px;
+	}
+	#mobile-doc-menu .documentation-page-links {
+	    box-shadow: none;
+	    padding: 40px 10px;
+	    margin-bottom: 30px;
+	}
+	#mobile-doc-menu .offcanvas-header{
+	    justify-content: flex-end;
+	}
+
+
+}
+
+@media (max-width: 767.98px) {
+	.font-h2 {
+	    font-size: 30px !important;
+	}
+	.font-h1 {
+	    font-size: 45px !important;
+	}
+	
+	.font-p {
+	    font-size: 15px !important;
+	}
+	
+	.font-h4 {
+	    font-size: 22px !important;
+	}
+	.footer-info {
+	    margin-bottom: 40px;
+	}
+	.updates-wraper {
+	    flex-wrap: wrap;
+	}
+	.updates-image {
+	    width: 350px;
+	    margin-right: 0px;
+	    max-width: 100%;
+	}
+	.updates-form.header-form {
+	    margin-top: 40px;
+	    margin-bottom: 10px;
+	}
+	#updates .container:after {
+	    height: 90%;
+	    bottom: -20px;
+	    border-radius: 40px;
+	}
+	.updates-form.header-form {
+	    margin-top: 40px;
+	    margin-bottom: 10px;
+	}
+	.footer-content p {
+	    font-size: 14px;
+	    line-height: 22px;
+	}
+	section#footer {
+	    background: #ECEBED;
+	    padding: 50px 0px;
+	    margin-top: 65px;
+	}
+	a.navbar-brand {
+	    width: 140px;
+	}
+	.menu-right-btn {
+	    position: absolute;
+	    right: 65px;
+	    width: auto;
+	    top: 11px;
+	}
+	/*
+	    End zasper collection
+	*/
+	.documentation-product-item {
+	    width: 80%;
+	}
+	
+}
+
+@media (max-width: 575.98px) {
+	.font-h1 {
+	    font-size: 40px !important;
+	}
+	.menu-right-btn .btn-border, .menu-right-btn .btn-bg {
+	    padding: 6px 10px;
+	}
+	.menu-right-btn {
+	    top: 10px;
+	}
+	a.nav-link {
+	    font-size: 18px;
+	    margin-top: 7px;
+	    margin-bottom: 7px;
+	}
+	/*
+	    End zasper collection
+	*/
+	.documentation-product-sec {
+	    padding: 40px 0px;
+	}
+	.documentation-product-item {
+	    width: 60%;
+	    padding: 30px 20px;
+	    margin: 0 auto;
+	    margin-bottom: 10px;
+	    margin-top: 10px;
+	}
+	.documentation-product-sec .section-title h2 {
+	    font-size: 30px !important;
+	}
+	.zasper-documentation-header {
+	    padding: 40px 0px;
+	}
+	section#documentation-sec {
+	    padding: 40px 0px;
+	}
+	
+}
+@media (max-width: 500px) {
+	
+}
+@media (max-width: 400px) {
+	.font-h2 {
+	    font-size: 25px !important;
+	}
+	.font-h4 {
+	    font-size: 19px !important;
+	}
+	.font-h3 {
+	    font-size: 22px !important;
+	}
+	.footer-menu {
+	    margin-top: 30px;
+	    margin-bottom: 30px;
+	}
+	.footer-menu-wraper > div {
+	    width: 48%;
+	}
+	#updates .container:after {
+	    height: 90%;
+	    bottom: -20px;
+	    border-radius: 20px;
+	}
+	.footer-menu-wraper {
+	    flex-wrap: wrap;
+	}
+	.menu-right-btn {
+	    display: none;
+	}
+	a.nav-link {
+	    font-size: 16px;
+	}
+	.menu-right-btn.mobile-menu-login-signup {
+	    display: block;
+	    position: absolute;
+	    left: 50%;
+	    transform: translate(-50%, 0);
+	    width: fit-content;
+	    bottom: 10px !important;
+	    top: auto;
+	    right: inherit;
+	}
+	/*
+	    End zasper collection
+	*/
+	.documentation-product-item {
+	    width: 100%;
+	}
+	.product-content h2 {
+	    font-size: 19px;
+	}
+	.documentation-page-links {
+	    padding: 40px 20px;
+	    margin-bottom: 30px;
+	}
+	.documentation-page-links a {
+	    font-size: 14px;
+	}
+	.documentation-content-top a, .documentation-content-top span {
+	    font-size: 12px;
+	}
+	.documentation-content-top i {
+	    font-size: 16px;
+	}
+	.documentation-main-content > ul {
+	    padding-left: 15px;
+	}
+	.documentation-topic h6 {
+	    margin-left: 15px;
+	}
+	.documentation-topic ul {
+	    margin-left: 10px;
+	}
+	.feedback-wraper {
+	    padding: 24px 5px;
+	}
+	.feedback-wraper p,.feedback-wraper a {
+	    font-size: 14px;
+	}
+}
