--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Zasper - An Opensource IDE">
+    <meta name="title" content="Zasper: A Supercharged IDE for Data Science">
     <meta name="description" content="">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Zasper - An Opensource IDE">
+    <meta property="og:title" content="Zasper: A Supercharged IDE for Data ScienceE">
     <meta property="og:description" content="">
     <meta property="og:url" content="https://zasper.io/">
-    <meta property="og:site_name" content="Zasper - An Opensource IDE">
+    <meta property="og:site_name" content="Zasper: A Supercharged IDE for Data Science">
     <meta property="og:image" content="https://zasper.io/static/images/favicon.png">
   
 
