--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -64,7 +64,9 @@
                 <a class="nav-link" href="/blog">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/zasper-io/zasper">Code</a>
+                <a class="nav-link"  href="https://github.com/zasper-io/zasper" target="_blank">
+                  <img src="https://img.shields.io/github/stars/zasper-io/zasper" alt="GitHub Stars">
+                </a>
               </li>
             </ul>
           </div>
