--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@
               <h6>Related Blog</h6>
 
               {% for post in site.posts limit:2 %}
+              {% if post.categories contains 'blog' %}
 
               <div class="related-blog-item latest-post-item wow fadeInUp" data-wow-delay="0.1s">
                 <a href="{{ post.url }}.html">
@@ -36,6 +37,7 @@
                   </div>
                 </a>
               </div>
+              {% endif %}
               {% endfor %}
 
             </div>
