--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
           <div class="col-12">
             <div class="copyright-text">
-              <p>©2024 Prasun Anand | All rights reserved.</p>
+              <p>©2024-2025 Prasun Anand | All rights reserved.</p>
             </div>
           </div>
         </div>
