--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,9 +63,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/blog">Blog</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://github.com/zasper-io/zasper">Code</a>
-              </li>
+              <a class="nav-link"  href="https://github.com/zasper-io/zasper" target="_blank">
+                <img src="https://img.shields.io/github/stars/zasper-io/zasper" alt="GitHub Stars">
+              </a>
             </ul>
           </div>
         </div>
