--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1015,9 +1015,12 @@ span.documentation-date {
     display: inline-block;
 }
 .documentation-main-content p {
-    font-size: 14px;
+    font-weight: 300;
+    font-size: 16px;
     color: #484848;
-    margin-bottom: 15px;
+    line-height: 30px;
+    margin-bottom: 25px;
+    margin-top: 20px;
 }
 .documentation-main-content > ul {
     font-size: 14px;
