--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -52,6 +52,9 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu">
             <i class="fa fa-bars"></i>
           </button>
+          <a  href="https://github.com/zasper-io/zasper" target="_blank">
+            <img src="https://img.shields.io/github/stars/zasper-io/zasper" height="32px" alt="GitHub Stars">
+          </a>
           <div class="navbar-collapse justify-content-center offcanvas offcanvas-top offcanvas-body" id="offcanvasMenu">
             <button type="button" class="colse-btn" data-bs-dismiss="offcanvas">
               <i class="fa fa-times"></i>
@@ -63,11 +66,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="/blog">Blog</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link"  href="https://github.com/zasper-io/zasper" target="_blank">
-                  <img src="https://img.shields.io/github/stars/zasper-io/zasper" alt="GitHub Stars">
+                  <img src="https://img.shields.io/github/stars/zasper-io/zasper" height="32px" alt="GitHub Stars">
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
