Add downloads page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,50 @@
+    <section id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="footer-info wow fadeInUp" data-wow-delay="0.2s">
+              <div class="footer-image wow fadeInUp" data-wow-delay="0.1s">
+                <img src="/static/images/logo.svg" alt="#">
+              </div>
+              <div class="footer-content wow fadeInUp" data-wow-delay="0.2s">
+                <p>Zasper is a supercharged IDE purpose-built for data science, revolutionizing the world of interactive computing.
+                  It offers a lightweight memory footprint, blazing-fast performance, and the ability to handle massive concurrency.</p>
+              </div>
+              <div class="footer-social wow fadeInUp" data-wow-delay="0.3s">
+                <a href="https://www.linkedin.com/company/zasper"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://github.com/zasperio"><i class="fa fa-github" aria-hidden="true"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="footer-menu-wraper wow fadeInUp" data-wow-delay="0.4s">
+              <div>
+                <div class="footer-menu wow fadeInUp" data-wow-delay="0.5s">
+                  <h6>Resources</h6>
+                  <a href="/blog">Blog</a>
+                  <a href="/docs">Docs</a>
+                </div>
+              </div>
+              <div>
+                <div class="footer-menu wow fadeInUp" data-wow-delay="0.5s">
+                  <h6>Org</h6>
+                  <a href="#">Changelog</a>
+                  <a href="#">Release Notes</a>
+                </div>
+              </div>
+              <div>
+                <div class="footer-menu wow fadeInUp" data-wow-delay="0.1s">
+                  <h6>Community</h6>
+                  <a href="https://zasper.slack.com" target="_blank">Slack</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <section id="copyright">
       <div class="container">
         <div class="row">
