--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,4 +28,23 @@
   </div>
 </section>
 
+<section id="header-bottom">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="header-bottom-wraper">
+          <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
+            <h2 class="font-h2 fontw-300">blazingly fast & <span class="fontw-500">Super Efficient</span></h2>
+            <p class="font-p">Zasper scales to all your CPU cores unlike Jupyterlab and uses only a quarter of RAM and CPU.</p>
+            <a href="https://github.com/zasper-io/zasper" class="btn-bg-white fontw-500" target="_blank">Try it now</a>
+          </div>
+          <div class="header-bottom-image wow fadeInUp" data-wow-delay="0.4s">
+            <img src="/static/images/screen-image.png" alt="#">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% include footer.html %}
