--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -61,16 +61,14 @@
             </button>
             <ul class="navbar-nav">
               <li class="nav-item">
+                <a class="nav-link" href="/downloads">Downloads</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/docs">Docs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/blog">Blog</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link"  href="https://github.com/zasper-io/zasper" target="_blank">
-                  <img src="https://img.shields.io/github/stars/zasper-io/zasper" height="32px" alt="GitHub Stars">
-                </a>
-              </li> -->
             </ul>
           </div>
         </div>
