--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,29 +9,17 @@
     <div class="offcanvas-body">
 
       <div class="documentation-page-links wow fadeInUp">
-        <a href="#">
+        <a href="/docs">
           <svg xmlns="http://www.w3.org/2000/svg" width="17.442" height="17.442" viewBox="0 0 17.442 17.442"><defs><style>.a{fill:#484848;}</style></defs><g transform="translate(5697.002 -973.272) rotate(90)"><path class="a" d="M981.993,5697a8.721,8.721,0,1,1,8.721-8.722A8.731,8.731,0,0,1,981.993,5697Zm0-15.947a7.226,7.226,0,1,0,7.226,7.226A7.234,7.234,0,0,0,981.993,5681.055Z" transform="translate(0 0)"/><g transform="translate(977.935 5683.526)"><path class="a" d="M1006.571,5704.987a.747.747,0,0,1-.748-.748v-8.014a.748.748,0,1,1,1.5,0v8.014A.747.747,0,0,1,1006.571,5704.987Z" transform="translate(-1002.375 -5695.478)"/><path class="a" d="M992.732,5700.421a.748.748,0,0,1-.529-1.276l3.448-3.448a.748.748,0,0,1,1.057,1.058l-3.448,3.448A.747.747,0,0,1,992.732,5700.421Z" transform="translate(-991.985 -5695.478)"/><path class="a" d="M1009.744,5700.146a.747.747,0,0,1-.529-.219l-3.173-3.173a.747.747,0,0,1,1.057-1.057l3.173,3.173a.748.748,0,0,1-.529,1.276Z" transform="translate(-1002.375 -5695.479)"/></g></g></svg>
           Home
         </a>
-        <a href="#">
+        <a href="/docs/installation">
           <svg xmlns="http://www.w3.org/2000/svg" width="17.442" height="17.442" viewBox="0 0 17.442 17.442"><defs><style>.a{fill:#484848;}</style></defs><g transform="translate(5697.002 -973.272) rotate(90)"><path class="a" d="M981.993,5697a8.721,8.721,0,1,1,8.721-8.722A8.731,8.731,0,0,1,981.993,5697Zm0-15.947a7.226,7.226,0,1,0,7.226,7.226A7.234,7.234,0,0,0,981.993,5681.055Z" transform="translate(0 0)"/><g transform="translate(977.935 5683.526)"><path class="a" d="M1006.571,5704.987a.747.747,0,0,1-.748-.748v-8.014a.748.748,0,1,1,1.5,0v8.014A.747.747,0,0,1,1006.571,5704.987Z" transform="translate(-1002.375 -5695.478)"/><path class="a" d="M992.732,5700.421a.748.748,0,0,1-.529-1.276l3.448-3.448a.748.748,0,0,1,1.057,1.058l-3.448,3.448A.747.747,0,0,1,992.732,5700.421Z" transform="translate(-991.985 -5695.478)"/><path class="a" d="M1009.744,5700.146a.747.747,0,0,1-.529-.219l-3.173-3.173a.747.747,0,0,1,1.057-1.057l3.173,3.173a.748.748,0,0,1-.529,1.276Z" transform="translate(-1002.375 -5695.479)"/></g></g></svg>
-          Getting started
+          Installation
         </a>
-        <a href="#">
+        <a href="/docs/installing-webapp">
           <svg xmlns="http://www.w3.org/2000/svg" width="17.442" height="17.442" viewBox="0 0 17.442 17.442"><defs><style>.a{fill:#484848;}</style></defs><g transform="translate(5697.002 -973.272) rotate(90)"><path class="a" d="M981.993,5697a8.721,8.721,0,1,1,8.721-8.722A8.731,8.731,0,0,1,981.993,5697Zm0-15.947a7.226,7.226,0,1,0,7.226,7.226A7.234,7.234,0,0,0,981.993,5681.055Z" transform="translate(0 0)"/><g transform="translate(977.935 5683.526)"><path class="a" d="M1006.571,5704.987a.747.747,0,0,1-.748-.748v-8.014a.748.748,0,1,1,1.5,0v8.014A.747.747,0,0,1,1006.571,5704.987Z" transform="translate(-1002.375 -5695.478)"/><path class="a" d="M992.732,5700.421a.748.748,0,0,1-.529-1.276l3.448-3.448a.748.748,0,0,1,1.057,1.058l-3.448,3.448A.747.747,0,0,1,992.732,5700.421Z" transform="translate(-991.985 -5695.478)"/><path class="a" d="M1009.744,5700.146a.747.747,0,0,1-.529-.219l-3.173-3.173a.747.747,0,0,1,1.057-1.057l3.173,3.173a.748.748,0,0,1-.529,1.276Z" transform="translate(-1002.375 -5695.479)"/></g></g></svg>
-           Data Science & Engineering guide
-        </a>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="17.442" height="17.442" viewBox="0 0 17.442 17.442"><defs><style>.a{fill:#484848;}</style></defs><g transform="translate(5697.002 -973.272) rotate(90)"><path class="a" d="M981.993,5697a8.721,8.721,0,1,1,8.721-8.722A8.731,8.731,0,0,1,981.993,5697Zm0-15.947a7.226,7.226,0,1,0,7.226,7.226A7.234,7.234,0,0,0,981.993,5681.055Z" transform="translate(0 0)"/><g transform="translate(977.935 5683.526)"><path class="a" d="M1006.571,5704.987a.747.747,0,0,1-.748-.748v-8.014a.748.748,0,1,1,1.5,0v8.014A.747.747,0,0,1,1006.571,5704.987Z" transform="translate(-1002.375 -5695.478)"/><path class="a" d="M992.732,5700.421a.748.748,0,0,1-.529-1.276l3.448-3.448a.748.748,0,0,1,1.057,1.058l-3.448,3.448A.747.747,0,0,1,992.732,5700.421Z" transform="translate(-991.985 -5695.478)"/><path class="a" d="M1009.744,5700.146a.747.747,0,0,1-.529-.219l-3.173-3.173a.747.747,0,0,1,1.057-1.057l3.173,3.173a.748.748,0,0,1-.529,1.276Z" transform="translate(-1002.375 -5695.479)"/></g></g></svg>
-           Machine Learning guide
-        </a>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="17.442" height="17.442" viewBox="0 0 17.442 17.442"><defs><style>.a{fill:#484848;}</style></defs><g transform="translate(5697.002 -973.272) rotate(90)"><path class="a" d="M981.993,5697a8.721,8.721,0,1,1,8.721-8.722A8.731,8.731,0,0,1,981.993,5697Zm0-15.947a7.226,7.226,0,1,0,7.226,7.226A7.234,7.234,0,0,0,981.993,5681.055Z" transform="translate(0 0)"/><g transform="translate(977.935 5683.526)"><path class="a" d="M1006.571,5704.987a.747.747,0,0,1-.748-.748v-8.014a.748.748,0,1,1,1.5,0v8.014A.747.747,0,0,1,1006.571,5704.987Z" transform="translate(-1002.375 -5695.478)"/><path class="a" d="M992.732,5700.421a.748.748,0,0,1-.529-1.276l3.448-3.448a.748.748,0,0,1,1.057,1.058l-3.448,3.448A.747.747,0,0,1,992.732,5700.421Z" transform="translate(-991.985 -5695.478)"/><path class="a" d="M1009.744,5700.146a.747.747,0,0,1-.529-.219l-3.173-3.173a.747.747,0,0,1,1.057-1.057l3.173,3.173a.748.748,0,0,1-.529,1.276Z" transform="translate(-1002.375 -5695.479)"/></g></g></svg>
-           Data Pipeline guide
-        </a>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="17.442" height="17.442" viewBox="0 0 17.442 17.442"><defs><style>.a{fill:#484848;}</style></defs><g transform="translate(5697.002 -973.272) rotate(90)"><path class="a" d="M981.993,5697a8.721,8.721,0,1,1,8.721-8.722A8.731,8.731,0,0,1,981.993,5697Zm0-15.947a7.226,7.226,0,1,0,7.226,7.226A7.234,7.234,0,0,0,981.993,5681.055Z" transform="translate(0 0)"/><g transform="translate(977.935 5683.526)"><path class="a" d="M1006.571,5704.987a.747.747,0,0,1-.748-.748v-8.014a.748.748,0,1,1,1.5,0v8.014A.747.747,0,0,1,1006.571,5704.987Z" transform="translate(-1002.375 -5695.478)"/><path class="a" d="M992.732,5700.421a.748.748,0,0,1-.529-1.276l3.448-3.448a.748.748,0,0,1,1.057,1.058l-3.448,3.448A.747.747,0,0,1,992.732,5700.421Z" transform="translate(-991.985 -5695.478)"/><path class="a" d="M1009.744,5700.146a.747.747,0,0,1-.529-.219l-3.173-3.173a.747.747,0,0,1,1.057-1.057l3.173,3.173a.748.748,0,0,1-.529,1.276Z" transform="translate(-1002.375 -5695.479)"/></g></g></svg>
-           Resources
+          Installation : WebApp
         </a>
       </div>
 
