add windows row

--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -56,6 +56,13 @@
                   class="btn-bg" target="_blank">Coming Soon!</a>
               </td>
             </tr>
+            <tr>
+              <td>Windows</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.0.1/zasper-0.0.1-windows.zip"
+                  class="btn-bg" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
           </tbody>
         </table>
 
