Add supported by section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,4 +47,23 @@
   </div>
 </section>
 
+<section id="trusted-on-us">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="trusted-on-us-wraper">
+          <div class="section-title wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+            <h4 class="font-h4 fontw-300">proud to be</h4>
+            <h2 class="font-h2 fontw-500">supported by</h2>
+          </div>
+          <div class="trusted-companies-logo wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+            <img src="/static/images/zerodha.png" id="zerodha-logo" alt="#">
+            <img src="/static/images/foss-united.png" alt="#">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% include footer.html %}
