Add demo video to website

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,71 @@
   </div>
 </section>
 
+<section class="gray-white-gradient">
+  <div class="container">
+    <div class="row">
+      <div id="support-tools">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
+                <h4 class="font-h4 fontw-300">zasper supports tools</h4>
+                <h2 class="font-h2 fontw-500">that you already use</h2>
+              </div>
+
+              <div class="support-tools-wraper wow fadeInUp" data-wow-delay="0.4s">
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.1s">
+                  <img src="/static/images/support/support-tools-logo1.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.2s">
+                  <img src="/static/images/support/support-tools-logo2.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.3s">
+                  <img src="/static/images/support/support-tools-logo3.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.4s">
+                  <img src="/static/images/support/support-tools-logo4.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.5s">
+                  <img src="/static/images/support/support-tools-logo5.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.6s">
+                  <img src="/static/images/support/support-tools-logo6.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.7s">
+                  <img src="/static/images/support/support-tools-logo7.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.8s">
+                  <img src="/static/images/support/support-tools-logo8.png" alt="#" />
+                </div>
+                <div class="support-tools-logo wow fadeInUp" data-wow-delay="0.9s">
+                  <img src="/static/images/support/support-tools-logo9.png" alt="#" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="community-sec">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
+                <h2 class="font-h2 fontw-300">take a look at </h2>
+                <h2><span class="fontw-500">what we built</span></h2>
+              </div>
+              <div class="community-wraper">
+                <iframe class="demoFrame" src="https://www.youtube.com/embed/LvVOkYL_LzQ" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section id="trusted-on-us">
   <div class="container">
     <div class="row">
