--- a/static/css/style.css
+++ b/static/css/style.css
@@ -263,6 +263,107 @@ nav.navbar.navbar-expand-lg {
     text-align: center;
 }
 
+
+.support-tools-wraper {
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 52px 125px;
+    box-shadow: 0px 3px 26px #3f177e12;
+    border-radius: 40px;
+    margin-top: 60px;
+    width: 1242px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
+
+.support-tools-wraper>div {
+    width: 17%;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.support-tools-wraper>div img {
+    width: 60%;
+    max-width: 100%;
+    opacity: .7;
+    transition: .3s ease;
+}
+
+.community-wraper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 90px;
+}
+
+.demoFrame{
+    width: 100%;
+    height: 800px;
+}
+
+.community-wraper>div {
+    width: 31%;
+}
+
+.community-post-image img {
+    width: 100%;
+    transition: .3s ease;
+}
+
+.community-post-image {
+    border-radius: 30px;
+    overflow: hidden;
+}
+
+.community-post-content {
+    width: 88%;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+
+.community-post-content span {
+    color: #583BD8;
+    font-size: 14px;
+}
+
+.community-post-content h5 {
+    color: #000000;
+    margin-top: 10px;
+    transition: .3s ease;
+}
+
+#community-sec {
+    padding: 75px 0px;
+}
+
+.community-post-item a:hover img {
+    transform: scale(1.1) rotate(-5deg);
+}
+
+.community-post-item a:hover h5 {
+    color: #281964;
+}
+
+.community-more-btn {
+    text-align: center;
+    margin-top: 60px;
+}
+
+.gray-white-gradient>.container {
+    background: transparent linear-gradient(180deg, #FFFFFF 40%, #D6D4E0 100%) 0% 0% no-repeat padding-box;
+    border-radius: 40px;
+    padding: 0px 30px;
+}
+
+
 .trusted-companies-logo{
     justify-content: center;
     align-items: center;
