--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
               </div>
               <div class="footer-social wow fadeInUp" data-wow-delay="0.3s">
                 <a href="https://www.linkedin.com/company/zasper"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://x.com/zasper_io/"><i class="fa fa-x" aria-hidden="true"></i></a>
                 <a href="https://github.com/zasperio"><i class="fa fa-github" aria-hidden="true"></i></a>
               </div>
             </div>
@@ -36,7 +36,7 @@
               <div>
                 <div class="footer-menu wow fadeInUp" data-wow-delay="0.1s">
                   <h6>Community</h6>
-                  <a href="https://zasper.slack.com" target="_blank">Slack</a>
+                  <a href="https://join.slack.com/t/zasper/shared_invite/zt-30sx3uo8w-w~sw4Kje1aoUjxY5MZ_Fkg" target="_blank">Slack</a>
                 </div>
               </div>
             </div>
