--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,8 +5,8 @@
       <div class="row">
         <div class="col-12 col-md-12 col-lg-6">
           <div class="header-text wow fadeInUp" data-wow-delay="0.2s">
-            <h3 class="font-h3 fontw-500">A Supercharged IDE</h3>
-            <h3 class="font-h4 fontw-300">for Data Science</h3>
+            <h3 class="font-h3 fontw-500">4X Better IDE</h3>
+            <h3 class="font-h4 fontw-300">than JupyterLab</h3>
             <p class="font-p">
               Zasper is an IDE designed from the ground up to support massive concurrency. It provides a minimal memory footprint, exceptional speed, and the ability to handle numerous concurrent connections.
             </p>
