--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
               <div>
                 <div class="footer-menu wow fadeInUp" data-wow-delay="0.1s">
                   <h6>Community</h6>
-                  <a href="https://join.slack.com/t/zasper/shared_invite/zt-30sx3uo8w-w~sw4Kje1aoUjxY5MZ_Fkg" target="_blank">Slack</a>
+                  <a href="/community" target="_blank">Slack</a>
                 </div>
               </div>
             </div>
